url change to heroku

--- a/login.html
+++ b/login.html
@@ -289,7 +289,7 @@
                     } else {
 
 
-                        $.post("http://localhost:3000/api/user/login", {
+                        $.post("https://afrigebeta.herokuapp.com/api/user/login", {
                             username: username,
                             password: password
                         }, function(data, status) {
