--- a/markets.html
+++ b/markets.html
@@ -86,7 +86,7 @@
 
 
             // test if it works
-            var url = 'http://localhost:3000/api/user/returnliststores/12.123/11.232/' + localStorage.getItem('token');
+            var url = 'https://afrigebeta.herokuapp.com/api/user/returnliststores/12.123/11.232/' + localStorage.getItem('token');
             $.get(url,
                 function(data, status) {
 
