--- a/my-account.html
+++ b/my-account.html
@@ -89,15 +89,16 @@
 
         function logout() {
             // make get request
-            let url = "http://localhost:3000/api/user/logout"
+            let url = "https://afrigebeta.herokuapp.com/api/user/logout"
             $.get(url,
-                function(data, status) {
-                    url_redirect({
-                        url: "http://localhost:3000",
-                        method: "get",
 
-                    });
-                })
+                // function(data, status) {
+                //     url_redirect({
+                //         url: "http://localhost:3000",
+                //         method: "get",
+
+                //     });
+            })
         }
     </script>
 
