--- a/login.html
+++ b/login.html
@@ -246,7 +246,8 @@
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
     <!--===============================================================================================-->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+    <!--===============================================================================================-->
+    <script src="public/vendor/jquery/jquery-3.2.1.min.js"></script>
     <script>
         function removewhite(string) {
             let t = ''
