jquery error fixed

--- a/markets.html
+++ b/markets.html
@@ -14,6 +14,7 @@
 
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Site Metas -->
+    <script src="public/vendor/jquery/jquery-3.2.1.min.js"></script>
     <title>Afri-Gebeta</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -409,8 +410,7 @@
 
     <a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
 
-    <!-- ALL JS FILES -->
-    <script src="public/js/jquery-3.2.1.min.js"></script>
+
     <script src="public/js/popper.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
