--- a/my-account.html
+++ b/my-account.html
@@ -29,7 +29,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="public/css/custom.css">
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+    <script src="public/vendor/jquery/jquery-3.2.1.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -473,8 +473,7 @@
 
     <a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
 
-    <!-- ALL JS FILES -->
-    <script src="public/js/jquery-3.2.1.min.js"></script>
+
     <script src="public/js/popper.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
