--- a/orderhistory.html
+++ b/orderhistory.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="public/css/custom.css">
 
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+    <script src="public/vendor/jquery/jquery-3.2.1.min.js"></script>
     <style>
         .order-detail {
             padding-top: 2em;
@@ -463,8 +463,7 @@
 
 
 
-    <!-- ALL JS FILES -->
-    <script src="public/js/jquery-3.2.1.min.js"></script>
+
     <script src="public/js/popper.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
