--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="16x16" href="public/assets/img/logo.jpg">
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+    <script src="public/vendor/jquery/jquery-3.2.1.min.js"></script>
     <!-- Site Metas -->
     <title>Afri-Gebeta</title>
     <meta name="keywords" content="">
@@ -1143,7 +1143,7 @@
     <a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
 
             <!-- ALL JS FILES -->
-            <script src="public/js/jquery-3.2.1.min.js"></script>
+
             <script src="public/js/popper.min.js"></script>
             <script src="public/js/bootstrap.min.js"></script>
             <!-- ALL PLUGINS -->
